--- a/main.html
+++ b/main.html
@@ -11,6 +11,46 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table border ="1">
+		<thead>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>01</td>
+				<td>Abu Salman</td>
+			</tr>
+			<tr>
+					<td>02</td>
+					<td>Hafsa khanam</td>
+			</tr>
+			<tr>
+					<td>03</td>
+					<td>Abu Talha</td>
+			</tr>
+			
+		<tbody>
+	</table>
+
+	<h1>List of medias:</h1>
+	<ol>
+        <li>
+            <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
+        </li>
+        <li>
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </li>
+        <li>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio tag.
+            </audio>
+        </li>
+    </ol>
 </body>
 
 </html>
