--- a/main.html
+++ b/main.html
@@ -38,11 +38,15 @@
         <li>
             <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
         </li>
-        <li>
-            <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+       <li>
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            </video>
         </li>
         <li>
-           <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            </audio>
         </li>
     </ol>
 </body>
